--- a/css/styles.css
+++ b/css/styles.css
@@ -1,20 +1,48 @@
 body {
   font-family: "Montserrat";
   font-weight: bold;
+  text-align: center;
 }
 
-h1 {
-  font-size: 3.5rem;
-  line-height: 1.5;
+h1,
+h2,
+h3 {
+  font-family: "Montserrat";
   font-weight: bold;
 }
-#title {
+
+p {
+  color: #414141;
+  font-weight: 500;
+}
+
+/* Containers */
+.container-fluid {
+  padding: 7% 15%;
+}
+
+/* Sections */
+
+.colored-section {
   background-color: #ff4c68;
   color: #fff;
 }
 
-.container-fluid {
-  padding: 3% 15%;
+.white-section {
+  background-color: white;
+}
+
+/* Headings */
+
+.big-heading {
+  font-size: 3.5rem;
+  line-height: 1.5;
+  font-weight: bold;
+}
+
+.section-heading {
+  font-size: 3.5rem;
+  line-height: 1.5;
 }
 
 /* Navigation Bar */
@@ -39,15 +67,110 @@ h1 {
   font-weight: 50;
 }
 
+/* Title Section  */
+
+#title {
+  text-align: left;
+}
+#title .container-fluid {
+  padding: 3% 15% 7%;
+}
+
 /* Download Buttons */
 
 .download-button {
-  margin: 5% 6% 5% 0;
+  margin: 5% 3% 5% 0;
 }
 
 /* Title Image */
 
 .title-image {
-  width: 60%;
   transform: rotate(25deg);
+  position: absolute;
+  right: 15%;
+}
+
+/* Features */
+
+#features {
+  position: relative;
+}
+
+.feature-box {
+  padding: 5%;
+}
+
+.feature-title {
+  font-size: 1.5rem;
+}
+
+.icon {
+  color: #ef8172;
+  margin-bottom: 1rem;
+}
+
+.icon:hover {
+  color: #ff4c68;
+}
+
+/* Testimonial Section  */
+
+#testimonials {
+  background-color: #ef8172;
+  padding: 5%;
+}
+
+.testimonial-text {
+  font-size: 3.5rem;
+  line-height: 1.5;
+}
+
+.testimonial-image {
+  width: 15%;
+  border-radius: 100%;
+  margin: 20px;
+}
+
+#press {
+  background-color: #ef8172;
+  padding-bottom: 3%;
+}
+
+.press-logo {
+  width: 15%;
+  margin: 20px 20px 50px;
+}
+
+/* Pricing Section */
+
+#pricing {
+  padding: 100px;
+}
+
+.pricing-column {
+  padding: 3% 2% 6%;
+  line-height: 1;
+}
+
+.price-text {
+  font-size: 3.5rem;
+  line-height: 1.5;
+}
+
+@media (max-width: 1028px) {
+  #title {
+    text-align: center;
+  }
+  .title-image {
+    position: static;
+    transform: rotate(0);
+  }
+}
+
+/* Call to Action */
+
+/* Footer  */
+
+.social-icon {
+  margin: 20px 10px;
 }
